--- a/circle.yml
+++ b/circle.yml
@@ -1,12 +1,7 @@
 dependencies:
-  pre:
-    - "[ ! -d '.mirror' ] && git clone --bare git@github.com:duksis/mirror-test-origin.git .bare && cd .bare && git push --mirror git@github.com:duksis/mirror-test-follower.git"
-    - "[ ! -d '.mirror' ] && rm -fr .bare"
-    - "[ ! -d '.mirror' ] && git clone --mirror git@github.com:duksis/mirror-test-origin.git .mirror && cd .mirror && git remote set-url --push origin git@github.com:duksis/mirror-test-follower"
-
   cache_directories:
     - ".mirror"
 
 test:
   override:
-    - cd .mirror && git fetch -p origin && git push --mirror
+    - ./script/github_mirror
